--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "lodash": "^4.17.20",
+    "pusher": "^5.0.0",
     "superagent": "^6.1.0"
   },
   "devDependencies": {
