--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "lodash": "^4.17.20",
+    "mongoose": "^5.10.19",
     "pusher": "^5.0.0",
     "superagent": "^6.1.0"
   },
@@ -20,6 +21,7 @@
     "@types/cors": "^2.8.10",
     "@types/express": "4.17.9",
     "@types/lodash": "^4.14.165",
+    "@types/mongoose": "^5.10.1",
     "@types/node": "10.14.18",
     "@types/superagent": "^4.1.11",
     "nodemon": "1.19.2",
