--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node": "12.x"
   },
   "dependencies": {
+    "@confuzzle/puz-crossword": "^1.2.3",
     "cookie-parser": "1.3.2",
     "cors": "^2.8.4",
     "dotenv": "^8.2.0",
