--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "lodash": "^4.17.20",
     "mongoose": "^5.10.19",
     "pusher": "^5.0.0",
-    "superagent": "^6.1.0"
+    "superagent": "^6.1.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
@@ -25,6 +26,7 @@
     "@types/mongoose": "^5.10.1",
     "@types/node": "10.14.18",
     "@types/superagent": "^4.1.11",
+    "@types/uuid": "^8.3.1",
     "nodemon": "1.19.2",
     "tslint": "^6.1.3",
     "typescript": "^4.0.5"
