--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "lodash": "^4.17.20",
     "mongoose": "^5.10.19",
+    "multer": "^1.4.2",
     "pusher": "^5.0.0",
     "superagent": "^6.1.0",
     "uuid": "^8.3.2"
@@ -24,6 +25,7 @@
     "@types/express": "4.17.9",
     "@types/lodash": "^4.14.165",
     "@types/mongoose": "^5.10.1",
+    "@types/multer": "^1.4.7",
     "@types/node": "10.14.18",
     "@types/superagent": "^4.1.11",
     "@types/uuid": "^8.3.1",
