--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   },
   "dependencies": {
     "@confuzzle/puz-crossword": "^1.2.3",
+    "body-parser": "^1.19.0",
     "cookie-parser": "1.3.2",
     "cors": "^2.8.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "lodash": "^4.17.20",
     "mongoose": "^5.10.19",
     "pusher": "^5.0.0",
@@ -19,9 +21,11 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.1",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.10",
     "@types/express": "4.17.9",
+    "@types/express-session": "^1.17.4",
     "@types/lodash": "^4.14.165",
     "@types/mongoose": "^5.10.1",
     "@types/node": "10.14.18",
