--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@types/uuid": "^8.3.1",
     "nodemon": "1.19.2",
     "tslint": "^6.1.3",
-    "typescript": "^4.0.5"
+    "typescript": "4.0.5"
   },
   "scripts": {
     "build-ts": "tsc",
