--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tedword",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "collaborative crossword puzzle app",
   "main": "dist/server.js",
   "engines": {
@@ -31,6 +31,7 @@
     "@types/node": "10.14.18",
     "@types/superagent": "^4.1.11",
     "@types/uuid": "^8.3.1",
+    "genversion": "^3.0.2",
     "nodemon": "1.19.2",
     "tslint": "^6.1.3",
     "typescript": "4.0.5"
@@ -39,6 +40,7 @@
     "build-ts": "tsc",
     "buildW": "./node_modules/typescript/bin/tsc -w",
     "build": "./node_modules/typescript/bin/tsc",
+    "package-setversion": "genversion --es6 --semi src/version.ts",
     "start": "NODE_ENV=production node dist/server.js",
     "dev": "nodemon server",
     "serve": "node dist/server.js",
